ingress/tls/ingress-minio.yaml
---
# Source: gitlab/charts/minio/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-minio
  namespace: gitlab
  labels:
    app: minio
    chart: minio-0.4.3
    release: gitlab
    heritage: Helm

  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.provider: external-nginx
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  rules:
    - host: minio.gnappv2.dev.gasneiva.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-minio-svc
                port:
                  number: 9000
  tls:
    - hosts:
        - minio.gnappv2.dev.gasneiva.com
      secretName: gitlab-wildcard-tls
